# countingsort_openmp

./: .gitignore  CMakeLists.txt  Doxyfile  ReadMe.md  report.docx  requirements.txt
include/: counting_occurrence.h  counting_sort.h  minmax.h  occurrences2ordarray.h  util.h
script/: extract_measure_algorithm.py  extract_measures.py  measure_algorithm.bash  measures.bash
source/: counting_occurrence.c  counting_sort.c  main.c  main_measure.c  min_max.c  minmax.c  occurrences2ordarray.c  util.c
source/measure/: counting_occurrance_getmeasures.c  minmax_getmeasure.c  occurrance2ordarray_getmeasures.c
test/: counting_sort_test.c
